# sql-copilot

./: .editorconfig  .gitignore  README.md  main.py  mise.toml  pyproject.toml  test_main.http
app/: config.py  main.py
app/agents/: execution_agent.py  metadata_agent.py  orchestrator.py  packaging_agent.py  postprocessing_agent.py  retrieval_agent.py  sql_generation_agent.py  understanding_agent.py  validation_agent.py
app/api/: routes.py
app/models/: request.py  response.py
app/services/: db.py  heystack_client.py  mcp_client.py  openmetadata_client.py
app/utils/: cache.py  error_handler.py
docs/: architecture.md  openapi.yaml
scripts/: migrate.sh
tests/: test_agents.py  test_routes.py
