[project]
name = "sql-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "click>=8.2.1",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "h11>=0.16.0",
    "idna>=3.10",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "sniffio>=1.3.1",
    "starlette>=0.46.2",
    "typing-extensions>=4.14.0",
    "typing-inspection>=0.4.1",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
lint = [
    "ruff>=0.11.13",
]

[tool.isort]
profile = "black"
