[project]
name = "sql-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "click>=8.2.1",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "h11>=0.16.0",
    "httpx>=0.28.1",
    "idna>=3.10",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "python-dotenv>=1.1.0",
    "sniffio>=1.3.1",
    "starlette>=0.46.2",
    "typing-extensions>=4.14.0",
    "typing-inspection>=0.4.1",
    "uvicorn>=0.34.3",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pluggy>=1.6.0",
    "certifi>=2025.6.15",
    "pygments>=2.19.1",
    "packaging>=25.0",
    "iniconfig>=2.1.0",
    "httpcore>=1.0.9",
]
